--- a/ss/responsive.css
+++ b/ss/responsive.css
@@ -122,6 +122,13 @@ p {
 	font-size: 24;
 }
 
+.navbar-font {
+	font-family: sscorners;
+	font-size: 24;
+}
+
+
+
 .navbar span {
 	display: inline-block;
 }
@@ -164,7 +171,7 @@ p {
 		padding: 0 .5em;
 		margin-left: .5em;
 	}
-	.navbar {
+	.navbar-font {
 		font-size: 24;
 	}
 	#content {
